--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,9 @@
 dependencies:
-  - conda-forge::numpy=1.19.2
+  - conda-forge::numpy=1.25.2
   - conda-forge::pip=21.0.1
   - conda-forge::python=3.9
+  - conda-forge::astropy=5.1
+  - conda-forge::seaborn=0.12.2
+  - conda-forge::ccdproc=2.4.1
   - pip:
-      - matplotlib==3.4.3
+      - matplotlib==3.7.1
