updated cbar labelling

--- a/showyourwork.yml
+++ b/showyourwork.yml
@@ -180,7 +180,7 @@ datasets:
           EFOSC.2000-12-30T07:59:36.806.fits: src/data/raw_photometry/SCIENCE/EFOSC.2000-12-30T07:59:36.806.fits
 # Custom file dependencies
 dependencies:
-  src/scripts/ex1_2.py:
+  src/scripts/random_bias_frames.py:
     - src/data/raw_photometry/CALIB/EFOSC.2000-12-30T05:17:49.057.fits
     - src/data/raw_photometry/CALIB/EFOSC.2000-12-29T04:39:50.783.fits
     - src/data/raw_photometry/CALIB/EFOSC.2000-12-28T22:11:19.687.fits
