--- a/showyourwork.yml
+++ b/showyourwork.yml
@@ -348,7 +348,7 @@ src/scripts/first_ron_estimates.py:
 ms_name: ms
 
 # Optimize DAG by removing unnecessary jobs upstream of cache hits?
-optimize_caching: false
+optimize_caching: true
 
 # Overleaf sync settings
 overleaf:
@@ -407,7 +407,7 @@ tectonic_args: []
 # preprocess_arxiv_script: my_preprocess_script.sh
 
 # Enable verbose output?
-verbose: false
+verbose: true
 
 # Version of `showyourwork` used to create this workflow
 version: 0.4.3
