--- a/showyourwork.yml
+++ b/showyourwork.yml
@@ -188,7 +188,7 @@ dependencies:
     - src/data/raw_photometry/CALIB/EFOSC.2000-12-30T04:19:55.000.fits
 
 src/scripts/create_master_bias.py:
-  - src/scripts/utils.py
+  #- src/scripts/utils.py
   - src/data/raw_photometry/CALIB/EFOSC.2000-12-28T22:11:19.687.fits
   - src/data/raw_photometry/CALIB/EFOSC.2000-12-30T05:17:49.057.fits
   - src/data/raw_photometry/CALIB/EFOSC.2000-12-28T22:09:41.589.fits
