--- a/showyourwork.yml
+++ b/showyourwork.yml
@@ -345,7 +345,7 @@ dependencies:
   src/scripts/create_master_dark.py:
     - src/scripts/utils.py
     - src/scripts/create_master_biases.py
-    - src/data/process_photometry/CALIB/bias/master_BIAS.fits
+    # - src/data/process_photometry/CALIB/bias/master_BIAS.fits
     - src/data/raw_photometry/CALIB/EFOSC.2000-12-28T22:11:19.687.fits
     - src/data/raw_photometry/CALIB/EFOSC.2000-12-30T05:17:49.057.fits
     - src/data/raw_photometry/CALIB/EFOSC.2000-12-28T22:09:41.589.fits
@@ -493,8 +493,8 @@ dependencies:
     - src/scripts/utils.py
     - src/scripts/create_master_biases.py
     - src/scripts/create_master_dark.py
-    - src/data/processed_photometry/CALIB/bias/master_BIAS.fits
-    - src/data/processed_photometry/CALIB/dark/master_DARK.fits
+    # - src/data/processed_photometry/CALIB/bias/master_BIAS.fits
+    # - src/data/processed_photometry/CALIB/dark/master_DARK.fits
     - src/data/raw_photometry/CALIB/EFOSC.2000-12-28T22:11:19.687.fits
     - src/data/raw_photometry/CALIB/EFOSC.2000-12-30T05:17:49.057.fits
     - src/data/raw_photometry/CALIB/EFOSC.2000-12-28T22:09:41.589.fits
