--- a/showyourwork.yml
+++ b/showyourwork.yml
@@ -178,6 +178,9 @@ datasets:
           EFOSC.2000-12-30T07:58:50.968.fits: src/data/raw_photometry/SCIENCE/EFOSC.2000-12-30T07:58:50.968.fits
           EFOSC.2000-12-30T08:00:22.811.fits: src/data/raw_photometry/SCIENCE/EFOSC.2000-12-30T08:00:22.811.fits
           EFOSC.2000-12-30T07:59:36.806.fits: src/data/raw_photometry/SCIENCE/EFOSC.2000-12-30T07:59:36.806.fits
+          EFOSC.2001-01-03T08:54:27.270.fits: src/data/raw_photometry/SCIENCE/EFOSC.2001-01-03T08:54:27.270.fits
+          EFOSC.2001-01-03T08:55:18.187.fits: src/data/raw_photometry/SCIENCE/EFOSC.2001-01-03T08:55:18.187.fits
+          EFOSC.2001-01-03T08:56:03.899.fits: src/data/raw_photometry/SCIENCE/EFOSC.2001-01-03T08:56:03.899.fits
 # Custom file dependencies
 dependencies:
   src/scripts/random_bias_frames.py:
@@ -661,6 +664,24 @@ dependencies:
     - src/data/processed_photometry/CALIB/flats/
     # - src/data/processed_photometry/CALIB/flats/lamp/V/master_LAMPFLAT.fits
     # - src/data/processed_photometry/CALIB/flats/lamp/R/master_LAMPFLAT.fits
+
+  src/scripts/process_science_images.py:
+    - src/scripts/utils.py
+    - src/data/processed_photometry/CALIB/bias/
+    - src/data/processed_photometry/CALIB/darks/
+    - src/data/processed_photometry/CALIB/flats/
+    - src/data/raw_photometry/SCIENCE/EFOSC.2000-12-30T07:58:50.968.fits
+    - src/data/raw_photometry/SCIENCE/EFOSC.2000-12-30T08:00:22.811.fits
+    - src/data/raw_photometry/SCIENCE/EFOSC.2000-12-30T07:59:36.806.fits
+
+  src/scripts/process_standard_stars.py:
+    - src/scripts/utils.py
+    - src/data/processed_photometry/CALIB/bias/
+    - src/data/processed_photometry/CALIB/darks/
+    - src/data/processed_photometry/CALIB/flats/
+    - src/data/raw_photometry/SCIENCE/EFOSC.2001-01-03T08:54:27.270.fits
+    - src/data/raw_photometry/SCIENCE/EFOSC.2001-01-03T08:55:18.187.fits
+    - src/data/raw_photometry/SCIENCE/EFOSC.2001-01-03T08:56:03.899.fits
 
   src/tex/ms.tex:
     - src/tex/figures/master_dark.pdf
