process science image

--- a/showyourwork.yml
+++ b/showyourwork.yml
@@ -686,6 +686,7 @@ dependencies:
   src/tex/ms.tex:
     - src/tex/figures/master_dark.pdf
     - src/tex/figures/master_skyflat.pdf
+    - src/data/processed_photometry/SCIENCE/
 #   # src/scripts/my_script.py:
 #   #   - src/data/dataset_for_my_script.dat
 #   src/tex/ms.tex:
