--- a/showyourwork.yml
+++ b/showyourwork.yml
@@ -379,7 +379,8 @@ dependencies:
   #   - src/data/zenodo_archive/SCIENCE/EFOSC.2001-01-03T08:55:18.187.fits
   #   - src/data/zenodo_archive/SCIENCE/EFOSC.2001-01-03T08:56:03.899.fits
 
-  # src/tex/ms.tex:
+  src/tex/ms.tex:
+    - src/data/raw_photometry/
   #   - src/tex/figures/master_dark.pdf
   #   - src/tex/figures/master_skyflat.pdf
   #   - src/data/processed_photometry/SCIENCE/
