--- a/showyourwork.yml
+++ b/showyourwork.yml
@@ -358,29 +358,16 @@ dependencies:
 
   # -------------------- FIGURES -------------------- #
 
-  src/scripts/random_bias_frames.py:
-    - src/data/raw_photometry/
-    - src/scripts/figures/figure_utils.py
+  # src/scripts/figures/random_bias_frames.py:
+  #   - src/data/raw_photometry/
+  #   - src/scripts/figures/figure_utils.py
   
-  src/scripts/bias_frame_histograms.py:
-    - src/data/raw_photometry/
-    - src/scripts/figures/figure_utils.py
+  # src/scripts/figures/bias_frame_histograms.py:
+  #   - src/data/raw_photometry/
+  #   - src/scripts/figures/figure_utils.py
 
-
-  # src/scripts/process_standard_stars.py:
-  #   - src/scripts/utils.py
-  #   - src/data/processed_photometry/CALIB/bias/
-  #   - src/data/processed_photometry/CALIB/darks/
-  #   - src/data/processed_photometry/CALIB/flats/
-  #   - src/data/zenodo_archive/SCIENCE/EFOSC.2000-12-30T07:58:50.968.fits
-  #   - src/data/zenodo_archive/SCIENCE/EFOSC.2000-12-30T08:00:22.811.fits
-  #   - src/data/zenodo_archive/SCIENCE/EFOSC.2000-12-30T07:59:36.806.fits
-  #   - src/data/zenodo_archive/SCIENCE/EFOSC.2001-01-03T08:54:27.270.fits
-  #   - src/data/zenodo_archive/SCIENCE/EFOSC.2001-01-03T08:55:18.187.fits
-  #   - src/data/zenodo_archive/SCIENCE/EFOSC.2001-01-03T08:56:03.899.fits
-
-  src/tex/ms.tex:
-    - src/data/raw_photometry/
+  # src/tex/ms.tex:
+  #   - src/data/raw_photometry/
   #   - src/tex/figures/master_dark.pdf
   #   - src/tex/figures/master_skyflat.pdf
   #   - src/data/processed_photometry/SCIENCE/
