added standard star reduction

--- a/showyourwork.yml
+++ b/showyourwork.yml
@@ -350,6 +350,13 @@ dependencies:
     - src/data/processed_photometry/calibration/darks/
     - src/data/processed_photometry/calibration/flats/
     - src/scripts/intermediate_results/processing_utils.py
+  
+  src/scripts/process_standard_star_images.py:
+    - src/data/raw_photometry/
+    - src/data/processed_photometry/calibration/bias/
+    - src/data/processed_photometry/calibration/darks/
+    - src/data/processed_photometry/calibration/flats/
+    - src/scripts/intermediate_results/processing_utils.py
 
   # -------------------- FIGURES -------------------- #
 
@@ -389,6 +396,14 @@ dependencies:
     - src/data/processed_photometry/science/observations/
     - src/scripts/figures/figure_utils.py
 
+  src/scripts/figures/lampflat_calibrated_standard_star_images.py:
+    - src/data/processed_photometry/science/standard_stars/
+    - src/scripts/figures/figure_utils.py
+
+  src/scripts/figures/skyflat_calibrated_standard_star_images.py:
+    - src/data/processed_photometry/science/standard_stars/
+    - src/scripts/figures/figure_utils.py
+
   src/tex/ms.tex:
     - src/tex/figures/master_dark_frame.pdf
     - src/tex/figures/master_skyflat_frames.pdf
@@ -396,6 +411,8 @@ dependencies:
     - src/tex/figures/master_bias_frame.pdf
     - src/tex/figures/skyflat_calibrated_science_images.pdf
     - src/tex/figures/lampflat_calibrated_science_images.pdf
+    - src/tex/figures/skyflat_calibrated_standard_star_images.pdf
+    - src/tex/figures/lampflat_calibrated_standard_star_images.pdf
 #   # src/scripts/my_script.py:
 #   #   - src/data/dataset_for_my_script.dat
 #   src/tex/ms.tex:
