--- a/environment.yml
+++ b/environment.yml
@@ -5,5 +5,6 @@ dependencies:
   - conda-forge::astropy=5.1
   - conda-forge::seaborn=0.12.2
   - conda-forge::ccdproc=2.4.1
+  - conda-forge::colorcet=3.0.1
   - pip:
       - matplotlib==3.7.1
