--- a/environment.yml
+++ b/environment.yml
@@ -8,3 +8,5 @@ dependencies:
   - conda-forge::colorcet=3.0.1
   - pip:
       - matplotlib==3.7.1
+      - uncertainties==3.1.7
+      - sigfig==1.3.3
